Update idea.md